         | C   C  O   O  NN  N  Q   Q  U   U  E      S        T   |
         | C      O   O  N N N  Q   Q  U   U  EEE     SSS     T   |
         | C   C  O   O  N  NN  Q  Q   U   U  E          S    T   |
         |  CCC    OOO   N   N   QQ Q   UUU   EEEEE  SSSS     T   |
         +--------------------------------------------------------+

                              Conquest HISTORY

8.1.2i (devel) 7/29/2006

       - fixed old bug that prevented phasers from damaging a target
         if it's angle was between 315 and 360 from your ship.  

       - fixed torpdir stuff in GL.c - should no longer get occasional
         incorrect directional torp angles.

       - changed ship textures and drawShip() to not use lower left as
         the ship's texture origin, like the other textures.

       - fix off-by-one in GL ship list.

       8.1.2h (devel - not released) 7/21/2006

       - patches from Clint Adams, putting the manpages in their proper
         place (section 6 rather than 1), and supplying a conqai and
         conqstrat manpage.

       - in initGLPlanets, use the classd texture by default (for
         class A, O, and Z, for example) rather than the moon
         texture. 

       - When looking for ~/.conquest/*.trc files, only look for files
         that *end* in .trc .

       - previously, the client(s) tried to be smart and not waste
         the server's time with requests it knew the server would
         reject, for example, firing a phaser when you are cloaked.  

         Unfortunately, this introduced race conditions when the
         connection had any significant lag, which would cause the
         client's idea of what would succeed to be incorrect.

         Now, we simply send such commands to the server, regardless
         of the local client's state, and let the server determine
         the validity of a command.

8.1.2g (devel) 7/16/2006

       - add 'Hull Critical' and 'Shields Critical' pulse messages to